<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 SCVNGR, Inc. d/b/a LevelUp

  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
  -->
<resources>

    <string name="app_name">LevelUp SDK Sample</string>
    <string name="app_name_enterprise">LevelUp Enterprise SDK Sample</string>
    <string name="button_card_add">Add Card</string>
    <string name="button_oauth2_example">OAuth2 Example</string>
    <string name="button_request_permissions">Request Permissions</string>
    <string name="card_add_hint_credit_card_number">Card Number</string>
    <string name="card_add_hint_cvv">CVV (Security Code)</string>
    <string name="card_add_hint_expiration">Expiration Date</string>
    <string name="card_add_hint_expiration_month">Month</string>
    <string name="card_add_hint_expiration_year">Year</string>
    <string name="card_add_hint_postal_code">Zip Code</string>
    <string name="card_add_progress">Adding your card…</string>
    <string name="enterprise_demo">Enterprise Demo</string>
    <string name="intro">Select an activity from below</string>
    <string name="login_button_sign_in">Sign In</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_progress_message">Logging you in…</string>
    <string name="login_with_level_up">Login with LevelUp</string>
    <string name="logout">Logout</string>
    <string name="menu_combined">Combined Login/Pay activity</string>
    <string name="menu_credit_card_add">Add Credit Card</string>
    <string name="menu_individual">Individual Login/Pay activities</string>
    <string name="menu_payment_with_tip">Payment with tip</string>
    <string name="menu_register">Register</string>
    <string name="menu_request_permissions">Request Permissions</string>
    <string name="menu_verifying_request_permissions">Request Permissions (with verification)</string>
    <string name="api_key_or_app_id_not_configured_message">LevelUp API key or App ID is not configured. See README.md for more info.</string>
    <string name="oauth_access_token">Access Token:</string>
    <string name="oauth_email_hint">Enter email to authenticate or register with.</string>
    <string name="oauth_load_web_view">Load LevelUpOAuthView</string>
    <string name="payment_ineligible_notice">This account isn’t eligible for payment. Please check the credit card(s) associated it.</string>
    <string name="permissions_request_levelup_installed">Before trying this demo, make sure your app’s signature is registered with the LevelUp web service.</string>
    <string name="permissions_request_levelup_missing">For this demo to function, a version of LevelUp which supports Deep Link authorization must be installed. Additionally, your app’s signature (in the same format that’s needed for Google maps) must be registered with the LevelUp web service.</string>
    <string name="register_button_sign_up">Sign up</string>
    <string name="register_button_sign_up_with_email">Sign up with email</string>
    <string name="register_hint_first_name">First name</string>
    <string name="register_hint_last_name">Last name</string>
    <string name="register_progress_message">Creating your account…</string>
    <string name="title_credit_card_add">Add a Credit Card</string>
    <string name="title_oauth2">OAuth2 Sample</string>
    <string name="title_permissions_request">Request Permissions</string>
    <string name="title_register">Register with LevelUp</string>

</resources>
